@@ -1,3 +1,10 @@
+2005-09-27  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/String.java (CASE_INSENSITIVE_ORDER): Now a
+	Comparator<String>.
+	(CaseInsensitiveComparator): Updated.
+	(CaseInsensitiveComparator.compare): Changed argument types.
+
 2005-09-26  Tom Tromey  <tromey@redhat.com>
 
 	* java/util/Formatter.java (format): Set fmtLocale.
